--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@ Hartree_Fock_three_Orbital_SOC.includes
 LOCAL_TEST
 SelfConsistent
 main.o
+Akw_t2g.txt
+Disorder_conf_used
+Eigen_spectrum.txt
+Initial_OrderParams_values_generated.txt
+LLr.txt
+Local_L2.txt
+Local_L2_old.txt
+Local_S2.txt
+Local_orb_spin_resolved_densities.txt
+Lq.txt
+Nw_jm.txt
+Nw_t2g.txt
+OrderParams_OUTPUT.txt
+SSr.txt
+Sq.txt	
+output.txt
