TBC working. DOS, A(k,w) not shifted by mu now. omega range is taken from input. These changes were required for TBC

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+corrs.txt
 Hartree_Fock_three_Orbital_SOC.config 
 Hartree_Fock_three_Orbital_SOC.creator 
 Hartree_Fock_three_Orbital_SOC.creator.user 
